# Speak-Up

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  CMakePresets.json  README.md  deploy_watch.sh  install_test.sh  package_archive.sh  package_variants.sh  vcpkg-configuration.json  vcpkg.json
cmake/: deploy.cmake.in
package/: CHANGELOG.md  README.md  SpeakUp.esp
package/LICENSES/: THIRD-PARTY.txt
package/MCM/Config/SpeakUp/: config.json  settings.ini
package/SKSE/Plugins/: SpeakUp.ini
package/Scripts/: VoiceSpellcasting_MCM.pex
package/Source/Scripts/: VoiceSpellcasting_MCM.psc
src/: CommandGrammar.cpp  CommandGrammar.h  Equipper.cpp  Equipper.h  FuzzyMatch.h  GlobalCommands.cpp  GlobalCommands.h  MicCapture.h  PCH.h  PhraseNormalize.h  Recognizer.cpp  Recognizer.h  SherpaLoader.h  SherpaRecognizer.cpp  SherpaRecognizer.h  ShoutVoiceHook.cpp  ShoutVoiceHook.h  SpellRoster.cpp  SpellRoster.h  TestHarness.cpp  TestHarness.h  Types.h  Vocabulary.cpp  Vocabulary.h  VoiceController.cpp  VoiceController.h  VoskLoader.h  main.cpp
tests-cpp/: CMakeLists.txt  test_grammar.cpp
